# databricks-hackathon-memori

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: chat.py  router.py
backend/app/core/: config.py  deps.py
backend/app/schemas/: chat.py
backend/app/services/: chat.py
backend/tests/: conftest.py  test_chat.py  test_chat_service.py  test_config.py
frontend/: Dockerfile
